--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lifespans",
   "version": "1.0.0",
   "description": "Lifespans is an app that lets you see which influential figures were alive in a given year.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
